samples/_failures_safe/1761304453_416792_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6c633712.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_6c633712.c:158:37: error: expected ‘;’ at end of input
  158 |             case TOKEN_EOF: type_str
      |                                     ^
      |                                     ;
./samples/SAFE/__tmp_6c633712.c:158:13: error: expected declaration or statement at end of input
  158 |             case TOKEN_EOF: type_str
      |             ^~~~
./samples/SAFE/__tmp_6c633712.c:158:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6c633712.c:158:13: error: expected declaration or statement at end of input
